--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -8,6 +8,18 @@ body {
     overflow-x: hidden;
 }
 
+.photos li   
+{  
+   float: left;  
+   display: block;  
+   position: relative;  
+   list-style-type: none;                 
+   margin: 10px;   
+   border: 5px solid #EEEEEE;  
+   height: 100px;  
+   width: 100px;  
+}
+
 p {
     font-size: 20px;
 }
