--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -49,7 +49,8 @@ h6 {
 }
 
 hr.star-light,
-hr.star-primary {
+hr.star-primary,
+hr.nostar-primary {
     margin: 25px auto 30px;
     padding: 0;
     max-width: 250px;
