--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -160,6 +160,19 @@ header .intro-text .skills {
     }
 }
 
+.circle{
+	display:block;
+	width:100px;
+	height:100px;
+	border-radius:50px;
+	font-size:20px;
+	color:#fff;
+	line-height:100px;
+	text-align:center;
+	text-decoration:none;
+	background:#000
+}
+
 .navbar {
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
