--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -26,6 +26,7 @@ main,
 menu,
 nav,
 section,
+summary,
 summary {
   display: block;
 }
@@ -189,6 +190,7 @@ td,
 th {
   padding: 0;
 }
+
 /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
 @media print {
   *,
